--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/detailsEvento.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/detailsEvento.html
@@ -85,7 +85,7 @@
 
                     <div class="form-group">
                         <label>Fecha</label>
-                        <input type="date" name="fechaEvento" th:value="${evento.getFecha()}"
+                        <input type="datetime-local" name="fechaEvento" th:value="${evento.getFecha()}"
                                class="form-control" disabled readonly/>
                     </div>
 
