--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
@@ -80,6 +80,9 @@
         <div class="col-lg-3">
             <a th:href="@{/Cliente/preCreateEvento}" class="btn btn-primary btn-sm mb-3">Nuevo Evento</a>
         </div>
+        <div class="col-lg-3">
+            <a th:href="@{/Cliente/cerrarSesion}" class="btn btn-primary btn-sm mb-3">Cerrar Sesion</a>
+        </div>
     </div>
 
     <div th:if="${param.success}">
