--- a/Proyecto_LDPII/src/main/resources/ReporteFactura.jrxml
+++ b/Proyecto_LDPII/src/main/resources/ReporteFactura.jrxml
@@ -1,7 +1,7 @@
 <!-- Created with Jaspersoft Studio version 7.0.1.final using JasperReports Library version 7.0.1-573496633c2b4074e32f433154b543003f7d2498  -->
 <jasperReport name="ReporteFactura" language="java" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1602c181-e5fc-4867-800b-2f61c3cb66a2">
 
-    <field name="id" class="java.lang.Integer"/>
+    <field name="id" class="java.lang.Long"/>
     <field name="descuento" class="java.lang.Double"/>
     <field name="fecha" class="java.time.LocalDate"/>
     <field name="precioFinal" class="java.math.BigDecimal"/>
@@ -21,7 +21,7 @@
     <background splitType="Stretch"/>
     <title height="60" splitType="Stretch">
         <element kind="frame" uuid="0df485e5-6818-4194-84ee-942b3e8b8f19" mode="Opaque" x="-20" y="-20" width="595" height="80" forecolor="#ADADAD" backcolor="#8F8F8F">
-            <element kind="staticText" uuid="95ad48ee-27b3-4074-a4e4-9bca6ead1d4c" x="50" y="23" width="272" height="40" forecolor="#FFFFFF" markup="none" fontName="DejaVu Sans" fontSize="29.0" bold="true">
+            <element kind="staticText" uuid="95ad48ee-27b3-4074-a4e4-9bca6ead1d4c" x="50" y="23" width="272" height="40" forecolor="#FFFFFF" markup="none" fontName="SansSerif" fontSize="29.0" bold="true">
                 <text><![CDATA[FACTURACIÓN]]></text>
             </element>
         </element>
