--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/confirmarEvento.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/confirmarEvento.html
@@ -104,8 +104,7 @@
                             </div>
 
                             <div class="form-group">
-                                <input style="display: none" type="text" name="idEvento" th:field="*{idEvento}"
-                                    th:value="*{idEvento}" class="form-control" readonly />
+                                <input style="display: none" type="text" th:field="*{evento.idEvento}" class="form-control" readonly />
                             </div>
 
                             <div class="form-group">
