Se creó FacturaController y se verificó el consumo correcto de sus endpoints

--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
@@ -65,7 +65,7 @@
                     <a class="nav-link" th:href="@{/Cliente/eventos}">Eventos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/Cliente/facturas}">Facturas</a>
+                    <a class="nav-link" th:href="@{/api/factura}">Facturas</a>
                 </li>
             </ul>
         </div>
